--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <!-- Need Reconfirm -->
     <meta name="google-site-verification" content="UFMk15-mChSCmToncoXcioYONHq-ImvciWiZqxSwee4" />
     <!-- Need Reconfirm -->
-    <meta property="og:title" content="Landing Page Termurah " />
-    <meta property="og:description" content="Landing Page Termurah " />
+    <meta property="og:title" content="Landing Page Termurah, Dika Aulia Akbar" />
+    <meta property="og:description" content="Landing Page Termurah, Dika Aulia Akbar" />
     <meta property="og:url" content="dikaauliaakbar.vercel.app" />
     <meta property="og:site_name" content="dikaauliaakbar.vercel.app" />
-    <meta property="og:author" content="Okeplay777" />
+    <meta property="og:author" content="Dika Aulia Akbar" />
     <link rel="canonical" href="dikaauliaakbar.vercel.app" />
-    <link rel="apple-touch-icon-precomposed" href="assets/img/favicons/logo.jpg">
-    <link rel="icon" href="assets/img/favicons/logo.jpg">
+    <link rel="apple-touch-icon-precomposed" href="https://cdn-icons-png.flaticon.com/512/2751/2751651.png">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2751/2751651.png">
     <style amp-boilerplate>
       body {
         -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -525,11 +525,9 @@ article ul li, article ol li  {
       <div class="container center">
         <div class="col-md-12">
           <img class="banner" 
-          src="https://i.ibb.co/3ytYb0T/28-X-8-1.png" 
+          src="https://i.ibb.co/MV73V8b/14.png" 
           width="100%;" 
           height="auto;">
-          <br>
-          <br>
         </div>
       </div>
       <!-- New Container For Banner -->
@@ -541,7 +539,7 @@ article ul li, article ol li  {
             <div class="col-md-6">
               <a href="https://wa.me/6282298369436" class="btn btn-main" target="_blank">Whatsapp</a>
               &nbsp;&nbsp;&nbsp;
-              <a class="btn btn-main" href="" target="_blank">View Resume</a>
+              <a class="btn btn-main" href="https://dikaauls.vercel.app" target="_blank">View Resume</a>
             </div>
           </div>
         </div>
@@ -551,7 +549,7 @@ article ul li, article ol li  {
     <main>
       <div class="container">
         <div class="marquee-text">
-          <div>Landing Page - Company Profile - Data Analyst - Proffesinal Administrator - IT</div>
+          <div>Landing Page - Company Profile - Data Analyst - Profesional Administrator - IT</div>
         </div>
         <div class="feature text-center center margin-bottom-3">
           <script type="application/ld+json">
@@ -567,12 +565,12 @@ article ul li, article ol li  {
               "image": " .'/assets/img/game.png'",
               "author": {
                 "@type": "Person",
-                "name": "okeplay777",
+                "name": "Dika Aulia Akbar",
                 "url": "dikaauliaakbar.vercel.app"
               },
               "publisher": {
                 "@type": "Organization",
-                "name": "okeplay777",
+                "name": "Dika Aulia Akbar",
                 "logo": {
                   "@type": "ImageObject",
                   "url": "dikaauliaakbar.vercel.app/assets/img/logo.gif"
@@ -585,7 +583,7 @@ article ul li, article ol li  {
           <article>
 
             <div class="container center">
-              <h2><span>Fasilitas <a href="https://rebrand.ly/KlikOKP1" >Dika Aulia Akbar </a> Serta Kemampuannya</span></h2>
+              <h2><span>Fasilitas <a href="https://dikaauls.vercel.app" >Dika Aulia Akbar </a> Serta Kemampuannya</span></h2>
               <table border="1">
                 <thead>
                   <tr>
@@ -631,7 +629,7 @@ article ul li, article ol li  {
             <div class="container center">
               <div class="col-md-12">
                 <img class="banner" 
-                src="https://i.ibb.co/MV73V8b/14.png" 
+                src="https://i.ibb.co/3ytYb0T/28-X-8-1.png" 
                 width="100%;" 
                 height="auto;">
                 <br>
