--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta title="Landing Page Termurah " />
-    <title>Landing Page Termurah </title>
+    <meta title="Dika Aulia Akbar Freelancer" />
+    <title>Landing Page Termurah</title>
     <meta name="description" content="Landing Page Murah dan Cepat" />
     <meta name="keywords" content="Landing Page, Freelancer, Landing, Page, Landing Page Murah, Freelancer Murah, Freelancer Landing Page, Company Profile, Compro, Company Profile Murah" />
     <!-- Need Reconfirm -->
     <meta name="google-site-verification" content="UFMk15-mChSCmToncoXcioYONHq-ImvciWiZqxSwee4" />
     <!-- Need Reconfirm -->
-    <meta property="og:title" content="Landing Page Termurah, Dika Aulia Akbar" />
-    <meta property="og:description" content="Landing Page Termurah, Dika Aulia Akbar" />
+    <meta property="og:title" content="Dika Aulia Akbar" />
+    <meta property="og:description" content="Profesional Freelancer Landing Page & Company Profile" />
     <meta property="og:url" content="dikaauliaakbar.vercel.app" />
     <meta property="og:site_name" content="dikaauliaakbar.vercel.app" />
     <meta property="og:author" content="Dika Aulia Akbar" />
@@ -441,7 +441,7 @@ article ul li, article ol li  {
               box-shadow: 0 0 10px 2px #d75c1e;
             }
           }
-          .btn-main {background-image: linear-gradient(to right, #4b4c78  0%, #a7c1c1  51%, #195225   100%)}
+          .btn-main {background-image: linear-gradient(to right, #4d5906  0%, #a7c1c1  51%, #195225   100%)}
           .btn-main {
               padding: 10px 13px;
               text-align: center;
@@ -475,7 +475,7 @@ article ul li, article ol li  {
           }
           .amp-img{
             border-radius: 10px;
-            animation: blinking 3s infinite;
+            animation: blinking 1s infinite;
           }
 
           
@@ -539,7 +539,9 @@ article ul li, article ol li  {
             <div class="col-md-6">
               <a href="https://wa.me/6282298369436" class="btn btn-main" target="_blank">Whatsapp</a>
               &nbsp;&nbsp;&nbsp;
-              <a class="btn btn-main" href="https://dikaauls.vercel.app" target="_blank">View Resume</a>
+              <a class="btn btn-main" href="https://dikaauls.vercel.app" target="_blank">Resume</a>
+              &nbsp;&nbsp;&nbsp;
+              <a class="btn btn-main" href="https://skyaccurates.vercel.app" target="_blank">SkyAccurates</a>
             </div>
           </div>
         </div>
