--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   {
     "@context": "https://schema.org/",
     "@type": "WebSite",
-    "name": "Landing Page Termurah ",
+    "name": "Dika Aulia Akbar - Landing Page Termurah ",
     "url": "https://dikaauliaakbar.vercel.app/"
   }
 </script>
@@ -14,11 +14,17 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta title="Dika Aulia Akbar Freelancer" />
-    <title>Landing Page Termurah</title>
-    <meta name="description" content="Landing Page Murah dan Cepat" />
-    <meta name="keywords" content="Landing Page, Freelancer, Landing, Page, Landing Page Murah, Freelancer Murah, Freelancer Landing Page, Company Profile, Compro, Company Profile Murah" />
+    <title>Dika Aulia Akbar - Landing Page Termurah</title>
+    <meta name="description" content="Landing Page Murah dan Cepat, Dika Aulia Akbar" />
+    <meta name="keywords" content="Landing Page, Freelancer, Landing, Page, Landing Page Murah, Freelancer Murah, Freelancer Landing Page, Company Profile, Compro, Company Profile Murah, Dika Aulia Akbar"/>
+    <meta name="title" content="Dika Aulia Akbar" />
+    <meta name="description" content="Profesional Freelancer Landing Page & Company Profile" />
+    <meta name="url" content="dikaauliaakbar.vercel.app" />
+    <meta name="site_name" content="dikaauliaakbar.vercel.app" />
+    <meta name="author" content="Dika Aulia Akbar" />
+    <meta content="Dika Aulia Akbar - Freelancer Landing Page" property="og:title">
+    <meta content="Dika Aulia Akbar - Freelancer Landing Page" property="og:description">
     <!-- Need Reconfirm -->
-    <meta name="google-site-verification" content="W-5hWe2izHs0uSK8jZKUNKdAHcLUziZpjAKK0MPnzIc" />
     <!-- Need Reconfirm -->
     <meta property="og:title" content="Dika Aulia Akbar" />
     <meta property="og:description" content="Profesional Freelancer Landing Page & Company Profile" />
@@ -26,8 +32,10 @@
     <meta property="og:site_name" content="dikaauliaakbar.vercel.app" />
     <meta property="og:author" content="Dika Aulia Akbar" />
     <link rel="canonical" href="dikaauliaakbar.vercel.app" />
-    <link rel="apple-touch-icon-precomposed" href="https://cdn-icons-png.flaticon.com/512/2751/2751651.png">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2751/2751651.png">
+    <link rel="apple-touch-icon-precomposed" href="/assets/img/coding.png" sizes="192x192">
+    <link rel="icon" href="/assets/img/coding.png" sizes="192x192">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <style amp-boilerplate>
       body {
         -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
